@@ -39,10 +39,32 @@ WriteMakefile
      'NAME'	=> 'Tk::Getopt',
      'VERSION_FROM' => 'Getopt.pm', # finds $VERSION
      # no PREREQ, because everything is in fact optional...
+     'PREREQ_PM'         => {},
+     'LICENSE'  => 'perl',
+     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
+      ('ABSTRACT_FROM' => 'Getopt.pm',
+       'AUTHOR'        => 'Slaven Rezic <srezic@cpan.org>'
+      ) : ()
+     ),
+     # Test::More is really a build_recomments, but this is not available
+     # in META.yml
+     'EXTRA_META' => <<EOF,
+recommends:
+    Tk: 804
+    Tk::FontDialog: 0
+    Data::Dumper: 0
+    Test::More: 0
+EOF
     );
 
 sub MY::postamble {
     my $postamble = "";
+
+    $postamble .= '
+demo :: pure_all
+	$(FULLPERL) -w -I$(SITELIBEXP)/Tk/demos/widget_lib -I$(SITEARCHEXP)/Tk/demos/widget_lib -I$(VENDORARCHEXP)/Tk/demos/widget_lib -Mblib demos/tk-getopt.pl
+
+';
 
     if (defined $ENV{USER} && $ENV{USER} eq 'eserte' && $^O =~ /bsd/i && -f "../../perl.release.mk") {
 	$postamble .= <<'EOF';
